# LAYR

./: .gitignore  README  README.md
Documentation/: Doxyfile
Documentation/html/: _c_make_lists_8txt.html  addresults_8cpp.html  addresults_8h.html  addresults_8h_source.html  annotated.html  bytecontainer_8cpp.html  bytecontainer_8h.html  bytecontainer_8h_source.html  class_add_results-members.html  class_add_results.html  class_byte_container-members.html  class_byte_container.html  class_d_o_s-members.html  class_d_o_s.html  class_e_x_t3___d_a_l-members.html  class_e_x_t3___d_a_l.html  class_e_x_t3___f_c_l-members.html  class_e_x_t3___f_c_l.html  class_ext3-members.html  class_ext3.html  class_failure-members.html  class_failure.html  class_heuristic-members.html  class_heuristic.html  class_input-members.html  class_input.html  class_intersection-members.html  class_intersection.html  class_minus-members.html  class_minus.html  class_or-members.html  class_or.html  (+98 more)
Tool/: CMakeLists.txt  bytecontainer.cpp  bytecontainer.h  customexception.h  getworkingdir.h  heuristic.h  parallel.h
Tool/Heuristics/AddResults/: addresults.cpp  addresults.h
Tool/Heuristics/DOS/: dos.cpp  dos.h
Tool/Heuristics/Ext3/: ext3.cpp  ext3.h
Tool/Heuristics/Failure/: failure.cpp  failure.h
Tool/Heuristics/Input/: input.cpp  input.h
Tool/ParallelOperators/: intersection.cpp  intersection.h  minus.cpp  minus.h  union.cpp  union.h
Tool/SequentialOperators/: or.cpp  or.h  seqcomp.cpp  seqcomp.h
Tool/Tests/: test_dos.cpp  test_ext3.cpp  test_or.cpp  test_seqComp.cpp  test_setops.cpp
(+87 files in other folders)
